--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>com.narayanjoshi</groupId>
     <artifactId>GPLApplication</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>GPL application</name>
@@ -92,7 +92,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.gplapplication/com.example.gplapplication.HelloApplication
+                            <mainClass>com.narayanjoshi.gplapplication.GPLApplicationRunner
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
